B Aligne l'application sur le règlement de l'association et refond l'interface
Règles métier
- Présence : cotisation de 2 000 FCFA répartie en 1 000 tontine, 500 boisson,
  500 développement ; 1 000 seulement pour un membre déjà servi avant l'arrivée
  du bénéficiaire du jour.
- Fond de roulement : deux séances couvertes puis compromis à 1 000 FCFA ;
  l'espèce solde les dettes de la plus ancienne à la plus récente, avances puis
  échecs, avant la séance du jour.
- Recouvrement d'échec : la part de tontine revient au bénéficiaire de la séance
  ratée, boisson et développement alimentent la séance en cours.
- Le bénéficiaire de la présence qui n'est pas à jour est régularisé d'office sur
  la tontine qu'il perçoit, avant toute retenue de sanction.
- On ne verse jamais plus que son dû : le plafond est la cotisation du jour
  augmentée des dettes en cours, vérifié à l'enregistrement de la feuille.
- Un membre qui rejoint un tour en cours y entre à la date de son entrée réelle,
  et non à la date d'adhésion de sa fiche.
- Grande tontine : réciprocité par dette, cotisation libre par multiples de
  5 000, le bénéficiaire cotise pour lui-même sans créer de dette.
- Sanctions : imputation partielle sur les tontines, solde encaissable en espèces.
- Toute opération financière appartient à une séance : sanctions et frais
  d'adhésion ne s'encaissent qu'en séance et comptent dans les entrées du jour.
- Une seule séance ouverte à la fois ; le rapport la clôture.
- Total remis au trésorier = entrées de la séance moins ses sorties, plancher à
  zéro ; l'écart inverse devient un complément prélevé sur les caisses.

Base de données
- Historique des migrations consolidé en deux fichiers : schéma et données
  initiales. Schéma vérifié identique à celui produit par l'ancienne chaîne.
- Journal des versements de frais d'adhésion, rattachés à leur séance.
- Index d'unicité garantissant une seule séance non clôturée.

Interface
- Refonte complète : système de design, mise en page à barre 